css/main.css
/*My own CSS*/

/*Fixate fullscreen background image for most browsers*/
html {
	background: url(../img/chicago.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}
/*-------------------*/

/*Hide scrollbar in Chrome*/
::-webkit-scrollbar {
	display: none;
}
/*-------------------*/

/*Text standards*/
h1, h2, h3, p, li {
	font-family: "Raleway", sans-serif;
	color: #fff;
}
/*-------------------*/

/*Jumbotron*/
.jumbotron {
	background-color: #000;
}

.jumbotron h1 {
	color: #fff;
	text-align: left;
}

.jumbotron p {
	text-align: left;
	font-size: 16px;
}
/*-------------------*/

/*Hamburger dropdown*/
.dropdown-menu {
	background-color: #ff0000;
	margin-right: 115px;
}

.dropdown-menu li {
	display: inline-block;
}

.dropdown-menu li a {
	text-align: center;
	font-size: 14px;
	color: #fff;
}

.dropdown-menu li a:hover {
	background-color: #ce1818;
	color: #fff;
}

#hamburger {
	margin-top: 35px;
	margin-left: 400px;
	height: 50px;
	width: 75px;
}
/*-------------------*/

/*Transparent box where the main content goes*/
.transbox {
	position: absolute;
	width: 75%;
	background-color: rgba(97, 99, 102, 0.5);
	margin-top: 50px;
	margin-left: 250px;
}

.transbox p {
	font-size: 25px;
}

section	{
	margin-top: 70px;
}
/*-------------------*/

/*Thumbnail class styling added onto bootstraps existing one*/
.thumbnail {
	display: inline-block;
	margin-right: 40px;
	margin-top: 20px;
	height: 150px;
	width: 150px;
}

.thumbnail-hover {
	background-color: #ff0000;
	border: none;
}

.thumbnail-highlight {
	height: 450px;
	width: 450px;
}
/*-------------------*/

/*Contact form*/
.contact-form {
	width: 60%;
}

label {
	color: #fff;
}

.center {
	text-align: center;
}

.form-group p {
	font-size: 14px;
}
/*-------------------*/

/*Form error and success messages*/
.firstname-error,
.lastname-error,
.email-error {
	background-color: #ef0707;
	width: 28%;
}

.submit-success {
	background-color: #63e534;
	width: 40%;
	margin-top: 10px;
}

#success {
	font-size: 14px;
}
/*-------------------*/

/*Footer*/
.footer {
	margin-top: 20px;
	margin-bottom: -10px;
	color: #fff;
	background-color: #000;
	text-align: center;
}

.footer p {
	font-size: 14px;
}
/*-------------------*/

/*Media querie for iPhone 6*/
@media only screen and (max-width: 380px) {
	/*Jumbotron*/
	.jumbotron h1,
	.jumbotron p
	{
		text-align: center;
	}
	/*-------------------*/

	/*Hamburger dropdown*/
	#hamburger {
		margin-top: -10px;
		margin-left: 140px;
	}

	.dropdown-menu {
		margin-right: 0px;
		width: 375px;
		text-align: center;
	}
	/*-------------------*/

	/*Transbox*/
	.transbox {
		margin-top: -20px;
		margin-left: 50px;
	}

	.transbox h2,
	.transbox p {
		text-align: center;
	}

	.transbox p {
		font-size: 16px;
	}

	section {
		margin-top: -5px;
	}
	/*-------------------*/

	/*Thumbnail*/
	.thumbnail {
		display: inline-block;
		margin-left: 35px;
		margin-right: 5px;
		height: 40px;
		width: 40px;
	}

	.thumbnail-highlight {
		height: 250px;
		width: 250px;
		margin-left: 16px;
		margin-right: 0px;
		margin-top: 0px;
	}
	/*-------------------*/

	/*Form error and success messages*/
	.firstname-error,
	.lastname-error,
	.email-error {
		width: 100%;
	}

	.submit-success {
	width: 100%;
	}
	/*-------------------*/

	-webkit-appearance: none;
}

